gccida/g2/rtx_to_tree_code
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtx_to_tree_code/src/explow.c:2120:24: error: must use 'enum' tag to refer to type 'rtx_code'
int  rtx_to_tree_code( rtx_code code) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtx_to_tree_code/src/explow.c:2128:8: error: use of undeclared identifier 'CSWTCH_156'
return CSWTCH_156[v1]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rtx_to_tree_code/src/obj/explow.o] Error 1
